--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,12 @@ h3 {
 h1 {
   font-size: 96px;
 }
+@media (max-width: 900px) {
+  h1 {
+    font-size: 48px;
+    line-height: 1.5;
+  }
+}
 h2 {
   font-size: 38px;
 }
