--- a/src/style.css
+++ b/src/style.css
@@ -17,14 +17,10 @@ h3 {
 h1 {
   font-size: 96px;
 }
-@media (max-width: 900px) {
-  h1 {
-    font-size: 48px;
-    line-height: 1.5;
-  }
-}
+
 h2 {
-  font-size: 38px;
+  font-size: 32px;
+  text-align: center;
 }
 h3 {
   font-size: 24px;
@@ -95,4 +91,21 @@ p {
 }
 .text-center {
   text-align: center !important;
+}
+@media (max-width: 576px) {
+  h1 {
+    font-size: 48px;
+    line-height: 1.5;
+  }
+  h2 {
+    font-size: 32px;
+  }
+  p {
+    text-align: center;
+  }
+  .project-link {
+    display: block;
+    text-align: center;
+    margin: 0, 20px;
+  }
 }
