--- a/src/style.css
+++ b/src/style.css
@@ -4,9 +4,7 @@
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 body {
-  margin: 0 auto;
-  margin: 30px;
-  margin-top: 100px;
+  margin: 100px 0;
 }
 h1,
 h2,
@@ -46,6 +44,19 @@ p {
   padding: 20px 15px;
   text-decoration: none;
   text-transform: capitalize;
+}
+.primary-link {
+  border-radius: 4px;
+  padding: 20px 15px;
+  text-decoration: none;
+  text-transform: capitalize;
+  background: var(--primary-color);
+  box-shadow: var(--box-shadow);
+  color: white;
+}
+
+.primary-link:hover {
+  color: white;
 }
 .contact-link {
   background: var(--primary-color);
