updated secondary link html and css

--- a/src/style.css
+++ b/src/style.css
@@ -58,6 +58,15 @@ p {
 .primary-link:hover {
   color: white;
 }
+
+.secondary-link {
+  border-radius: 4px;
+  padding: 20px 15px;
+  text-decoration: none;
+  text-transform: capitalize;
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+}
 .contact-link {
   background: var(--primary-color);
   box-shadow: var(--box-shadow);
