--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@
 body {
   font-family: var(--default-font-family);
 }
+
 h1,
 h2,
 h3,
@@ -17,22 +18,20 @@ h6 {
   color: black;
   font-family: var(--heading-font-family);
   font-weight: bold;
-  text-align: center;
-  margin: 0;
 }
 
 h1 {
   font-size: 96px;
 }
+
+h2 {
+  font-size: 64px;
+}
+
 p {
-  font-weight: bold;
-  background: var(--secondary-color);
-  font-size: 18px;
+  font-weight: normal;
+  font-size: 16px;
   line-height: 1.5;
-  padding: 20px;
-  border-radius: 4px;
-  margin: 0px;
-  width: 100%;
 }
 .hero {
   background: var(--secondary-color);
@@ -41,20 +40,35 @@ p {
 }
 .hero h2 {
   font-family: var(--heading-font-family);
-  font-weight: normal;
+  font-weight: bold;
   line-height: 2;
   font-size: 24px;
 }
+
 .hero p {
   font-size: 36px;
   font-weight: bold;
   margin: 0;
   color: #272142;
 }
+
+.hero {
+  padding: 80px 20px;
+}
+
 .btn-branding {
   background: var(--branding-color);
   color: white;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 12px 20px;
+}
+
+.btn-branding-outline {
+  color: var(--branding-color);
+  border: 1px solid var(--branding-color);
   border-radius: 4px;
   font-size: 18px;
   line-height: 27px;
@@ -74,6 +88,7 @@ h2 {
   font-size: 32px;
   text-align: center;
 }
+
 h3 {
   font-size: 24px;
   opacity: 0.7;
