--- a/src/style.css
+++ b/src/style.css
@@ -31,7 +31,7 @@ h2 {
 p {
   font-weight: normal;
   font-size: 16px;
-  line-height: 1.5;
+  line-height: 30px;
 }
 .hero {
   background: var(--secondary-color);
