--- a/src/style.css
+++ b/src/style.css
@@ -193,3 +193,9 @@ h3 {
 .project-description {
   padding: 120px 60px;
 }
+@media (max-width: 960px) {
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
+}
