--- a/src/style.css
+++ b/src/style.css
@@ -64,17 +64,28 @@ p {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 4px;
   font-size: 18px;
-  line-height: 27px;
-  padding: 12px 20px;
+  padding: 20px 15px;
 }
 
-.btn-branding-outline {
+.primary-link {
+  border-radius: 4px;
+  padding: 20px 15px;
+  text-decoration: none;
+  text-transform: capitalize;
+  background: var(--primary-color);
+  box-shadow: var(--box-shadow);
+  color: white;
+  font-size: 12px;
+}
+
+.secondary-link {
+  border-radius: 4px;
+  padding: 20px 15px;
+  text-decoration: none;
+  text-transform: capitalize;
   color: var(--branding-color);
   border: 1px solid var(--branding-color);
-  border-radius: 4px;
-  font-size: 18px;
-  line-height: 27px;
-  padding: 12px 20px;
+  font-size: 12px;
 }
 
 :root {
