--- a/src/style.css
+++ b/src/style.css
@@ -30,8 +30,8 @@ h2 {
 }
 
 p {
-  font-weight: normal;
-  font-size: 16px;
+  font-weight: bold;
+  font-size: 22px;
   line-height: 30px;
 }
 
@@ -168,11 +168,20 @@ h3 {
 }
 .about-paragraphs {
   display: flex;
-  margin: 30px 0;
+  font-size: 18px;
+  line-height: 1.5;
+  margin: 30px;
+  font-weight: normal;
 }
+
 .about-paragraphs p {
-  margin: 10px;
+  display: flex;
+  font-size: 18px;
+  line-height: 1.5;
+  margin: 30px;
+  font-weight: normal;
 }
+
 .email-link {
   display: flex;
   justify-content: center;
@@ -208,5 +217,8 @@ h3 {
   .project-desciption {
     padding: 0;
     text-align: center;
+  }
+  .about-paragraphs p {
+    font-size: 16px;
   }
 }
