--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,26 @@ p {
   font-size: 22px;
   line-height: 30px;
 }
+
+.hero {
+  background: var(--secondary-color);
+  text-align: center;
+  padding: 160px 20px;
+}
+
+.hero p {
+  font-size: 36px;
+  font-weight: bold;
+  margin: 0;
+  color: #272142;
+}
+.hero h2 {
+  font-family: var(--heading-font-family);
+  font-weight: normal;
+  line-height: 1.5;
+  font-size: 24px;
+}
+
 nav {
   padding: 20px 0;
 }
@@ -60,28 +80,6 @@ nav li.active a {
   color: var(--branding-color);
   transition: all 100ms ease-in-out;
   text-decoration: none;
-}
-
-.hero {
-  text-align: center;
-  padding: 160px 20px;
-}
-.hero h2 {
-  font-family: var(--heading-font-family);
-  font-weight: bold;
-  line-height: 2;
-  font-size: 24px;
-}
-
-.hero p {
-  font-size: 36px;
-  font-weight: bold;
-  margin: 0;
-  color: #272142;
-}
-
-.hero {
-  padding: 80px 20px;
 }
 
 .btn-branding {
