--- a/src/style.css
+++ b/src/style.css
@@ -53,6 +53,64 @@ p {
   line-height: 1.5;
   font-size: 24px;
 }
+.content-container {
+  padding: 160px 20px;
+}
+.content {
+  margin: 30px;
+}
+.content h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+.content h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
+.content h3 {
+  font-size: 24px;
+  line-height: 1.5;
+  margin: 20px 0 0;
+  font-family: var(--default-font-family);
+}
+.content p {
+  font-size: 14px;
+}
+.content-container img {
+  width: 400px;
+  border-radius: 30px;
+}
+
+.btn-branding {
+  background: var(--branding-color);
+  color: white;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.primary-link {
+  border-radius: 4px;
+  padding: 20px 15px;
+  text-decoration: none;
+  text-transform: capitalize;
+  background: var(--primary-color);
+  box-shadow: var(--box-shadow);
+  color: white;
+  font-size: 12px;
+}
+
+.secondary-link {
+  border-radius: 4px;
+  padding: 20px 15px;
+  text-decoration: none;
+  text-transform: capitalize;
+  color: var(--branding-color);
+  border: 1px solid var(--branding-color);
+  font-size: 12px;
+}
 
 nav {
   padding: 20px 0;
@@ -80,55 +138,6 @@ nav li.active a {
   color: var(--branding-color);
   transition: all 100ms ease-in-out;
   text-decoration: none;
-}
-
-.btn-branding {
-  background: var(--branding-color);
-  color: white;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 4px;
-  font-size: 18px;
-  padding: 20px 15px;
-}
-
-.primary-link {
-  border-radius: 4px;
-  padding: 20px 15px;
-  text-decoration: none;
-  text-transform: capitalize;
-  background: var(--primary-color);
-  box-shadow: var(--box-shadow);
-  color: white;
-  font-size: 12px;
-}
-
-.secondary-link {
-  border-radius: 4px;
-  padding: 20px 15px;
-  text-decoration: none;
-  text-transform: capitalize;
-  color: var(--branding-color);
-  border: 1px solid var(--branding-color);
-  font-size: 12px;
-}
-
-:root {
-  --primary-color: #805ed4;
-  --secondary-color: #f5f2fe;
-  --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-}
-body {
-  margin: 100px 0;
-}
-
-h2 {
-  font-size: 64px;
-  text-align: center;
-  line-height: 2;
-}
-
-h3 {
-  font-size: 24px;
 }
 
 .navigation-links {
@@ -277,33 +286,4 @@ h3 {
     text-align: center;
     border-radius: 30px;
   }
-}
-
-.content-container {
-  text-align: center;
-  padding: 160px 20px;
-}
-.content-container img {
-  width: 400px;
-  border-radius: 30px;
-}
-.content-container {
-  margin: 30px;
-}
-.content h1 {
-  font-size: 64px;
-  line-height: 80px;
-}
-.content h2 {
-  font-size: 18px;
-  font-family: var(--default-font-family);
-}
-.content h3 {
-  font-size: 24px;
-  line-height: 1.5;
-  margin: 20px 0 0;
-  font-family: var(--default-font-family);
-}
-.content p {
-  font-size: 14px;
 }
