--- a/src/style.css
+++ b/src/style.css
@@ -36,9 +36,14 @@ p {
 }
 
 .hero {
-  background: var(--secondary-color);
   text-align: center;
   padding: 160px 20px;
+}
+.hero h2 {
+  font-family: var(--heading-font-family);
+  font-weight: bold;
+  line-height: 2;
+  font-size: 24px;
 }
 
 .hero p {
@@ -47,48 +52,18 @@ p {
   margin: 0;
   color: #272142;
 }
-.hero h2 {
-  font-family: var(--heading-font-family);
-  font-weight: normal;
-  line-height: 1.5;
-  font-size: 24px;
-}
-.content-container {
-  padding: 160px 20px;
-}
-.content {
-  margin: 30px;
-}
-.content h1 {
-  font-size: 64px;
-  line-height: 80px;
-}
-.content h2 {
-  font-size: 18px;
-  font-family: var(--default-font-family);
-}
-.content h3 {
-  font-size: 24px;
-  line-height: 1.5;
-  margin: 20px 0 0;
-  font-family: var(--default-font-family);
-}
-.content p {
-  font-size: 14px;
-}
-.content-container img {
-  width: 400px;
-  border-radius: 30px;
+
+.hero {
+  padding: 80px 20px;
 }
 
 .btn-branding {
   background: var(--branding-color);
   color: white;
-  font-size: 18px;
-  line-height: 27px;
-  padding: 15px 30px;
-  border-radius: 4px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+  font-size: 18px;
+  padding: 20px 15px;
 }
 
 .primary-link {
@@ -112,32 +87,24 @@ p {
   font-size: 12px;
 }
 
-nav {
-  padding: 20px 0;
+:root {
+  --primary-color: #805ed4;
+  --secondary-color: #f5f2fe;
+  --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
-nav img {
-  max-height: 40px;
-}
-
-nav li {
-  display: inline;
-  list-style: none;
-  line-height: 42px;
-  margin-left: 10px;
+body {
+  margin: 100px 0;
 }
 
-nav ul {
-  margin: 0;
-  padding: 0;
+h2 {
+  font-size: 64px;
+  text-align: center;
+  line-height: 2;
 }
-nav a {
-  color: #272142;
-}
-nav a:hover,
-nav li.active a {
-  color: var(--branding-color);
-  transition: all 100ms ease-in-out;
-  text-decoration: none;
+
+h3 {
+  font-size: 24px;
+  opacity: 0.7;
 }
 
 .navigation-links {
@@ -237,6 +204,59 @@ nav li.active a {
   padding: 0;
 }
 
+.content-container {
+  padding: 160px 20px;
+}
+.content {
+  margin: 30px;
+}
+.content h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+.content h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
+.content h3 {
+  font-size: 24px;
+  line-height: 1.5;
+  margin: 20px 0 0;
+  font-family: var(--default-font-family);
+}
+.content p {
+  font-size: 14px;
+}
+.content-container img {
+  width: 400px;
+  border-radius: 30px;
+}
+
+nav {
+  padding: 20px 0;
+}
+nav img {
+  max-height: 40px;
+}
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 42px;
+  margin-left: 10px;
+}
+nav ul {
+  margin: 0;
+  padding: 0;
+}
+nav a {
+  color: #272142;
+}
+nav a:hover,
+nav li.active a {
+  color: var(--branding-color);
+  transition: all 100ms ease-in-out;
+  text-decoration: none;
+}
 @media (max-width: 900px) {
   h1 {
     font-size: 44px;
@@ -249,14 +269,6 @@ nav li.active a {
 
   .hero {
     padding: 80px 20px;
-  }
-
-  .logo {
-    max-width: 150px;
-  }
-
-  nav a {
-    font-size: 14px;
   }
 
   .project-desciption {
