--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@
 }
 body {
   font-family: var(--default-font-family);
+  margin: 30px;
 }
 h1,
 h2,
@@ -20,6 +21,7 @@ h6 {
 h1 {
   font-size: 96px;
   list-style: 1.5;
+  text-align: center;
 }
 h2 {
   font-size: 64px;
@@ -30,9 +32,7 @@ h3 {
   font-size: 24px;
   opacity: 0.7;
 }
-h4 {
-  font-size: 48px;
-}
+
 p {
   font-weight: bold;
   font-size: 22px;
@@ -41,7 +41,7 @@ p {
 
 .hero {
   text-align: center;
-  padding: 160px 20px;
+  padding: 80px 20px;
 }
 .hero h2 {
   font-family: var(--heading-font-family);
@@ -102,7 +102,7 @@ p {
   padding: 120px 60px;
 }
 .content-container {
-  padding: 160px 20px;
+  padding: 60px 20px;
 }
 .content-container img {
   width: 400px;
@@ -126,7 +126,8 @@ p {
   font-family: var(--default-font-family);
 }
 .content p {
-  font-size: 14px;
+  font-size: 18px;
+  font-weight: 500px;
 }
 
 .logo {
@@ -204,11 +205,8 @@ footer .social-links a:hover {
   h2 {
     font-size: 44px;
   }
-  h4 {
+  h3 {
     font-size: 26px;
-  }
-  .hero {
-    padding: 80px 20px;
   }
 
   .project-desciption {
@@ -226,10 +224,13 @@ footer .social-links a:hover {
 
   .content h2 {
     font-size: 24px;
+  }
+  .content a {
+    font-size: 18px;
     line-height: 1, 5;
   }
   .content p {
-    font-size: 24px;
+    font-size: 16px;
     font-weight: normal;
     line-height: 1, 5;
   }
@@ -237,5 +238,8 @@ footer .social-links a:hover {
     width: 300px;
     text-align: center;
     border-radius: 30px;
+  }
+  .annotation-code {
+    font-size: 16px;
   }
 }
