--- a/src/style.css
+++ b/src/style.css
@@ -175,6 +175,10 @@ footer .contact-box {
 footer .contact-box p {
   margin: 0;
 }
+
+footer .contact-box .form-parts {
+  margin: 0 200px;
+}
 footer .email-link {
   text-decoration: none;
   font-size: 24px;
